recent: Fix alignment of unread mention icon.

--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -165,6 +165,8 @@
 
         .unread_mention_info:not(:empty) {
             margin-right: -5px;
+            /* Match with its font-size. */
+            line-height: 14px;
         }
 
         .unread_hidden {
